# imessage-ndjson-exporter

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  rust-toolchain.toml
.claude/: settings.local.json
.config/: deny.toml  nextest.toml
crates/imessage-ndjson-core/: Cargo.toml  LICENSE-MIT
crates/imessage-ndjson-core/src/: attachment_manager.rs  contacts.rs  db.rs  exporter.rs  lib.rs
crates/imessage-ndjson-core/src/converters/: audio.rs  common.rs  image.rs  sticker.rs  video.rs
crates/imessage-ndjson-core/src/resolvers/: contacts.rs  mod.rs  replies.rs  tapbacks.rs
crates/imessage-ndjson-core/src/serialization/: attachments.rs  chat.rs  content.rs  message.rs  mod.rs  participant.rs  relationships.rs
crates/imessage-ndjson-core/src/test_utils/: assertions.rs  database.rs  fixtures.rs  mod.rs
crates/imessage-ndjson-exporter/: Cargo.toml
crates/imessage-ndjson-exporter/src/: cli.rs  main.rs
docs/: imessage-export-schema.json
docs/superpowers/plans/: 2026-05-27-mit-migration-workspace-split.md
examples/: README.md  app_messages.ndjson  attachments_copied.ndjson  attachments_embedded.ndjson  attachments_reference.ndjson  audio_attachments.ndjson  basic_text.ndjson  deleted_messages.ndjson  edit_history.ndjson  expressive_effects.ndjson  group_announcements.ndjson  group_chat_complete.ndjson  links_and_mentions.ndjson  multiple_attachments.ndjson  one_on_one_complete.ndjson  photo_attachments.ndjson  reactions.ndjson  retracted_content.ndjson  rich_text.ndjson  service_types.ndjson  stickers.ndjson  subject_lines.ndjson  thread_replies.ndjson  video_attachments.ndjson
scripts/: ndjson-chat-to-markdown.sh
src/: attachment_manager.rs  avatar_manager.rs  cli.rs  contacts.rs  exporter.rs  lib.rs  main.rs
src/converters/: audio.rs  image.rs  mod.rs  models.rs  sticker.rs
src/resolvers/: mod.rs  tapbacks.rs
src/serialization/: attachments.rs  content.rs  message.rs  mod.rs  relationships.rs
src/test_utils/: assertions.rs  database.rs  fixtures.rs  mod.rs
tests/: ndjson_chat_to_markdown_smoke.sh
tests/common/: context.rs  mod.rs
