[package]
name = "imessage-ndjson-core"
version = "0.1.0"
edition = "2021"
authors = ["Clay"]
description = "Core library for iMessage NDJSON export"
license = "MIT"

[dependencies]
imessage-db = "0.1"
imessage-core = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive", "cargo"] }
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
flate2 = "1.0"
zstd = "0.13"
plist = "^1.8"

[features]
test-utils = []

[dev-dependencies]
tempfile = "3.8"
assert-json-diff = "2.0"
predicates = "3.0"
assert_fs = "1.1"
assert_cmd = "2.0"
plist = "^1.8"
